# option_trait

./: Cargo.toml  README.md
src/: lib.rs  maybe.rs  maybe_and.rs  maybe_cell.rs  maybe_nand.rs  maybe_nor.rs  maybe_or.rs  maybe_xnor.rs  maybe_xor.rs  not_void.rs  opt_cell.rs  option_kind.rs  option_obj.rs  optional.rs  pure_maybe.rs  pure_static_maybe.rs  static_maybe.rs
src/ops/: and.rs  and_then.rs  filter.rs  mod.rs  or.rs  xor.rs
