[package]
name = "option_trait"
version = "1.0.1"
edition = "2021"
license = "MIT"
keywords = ["option", "util", "ops", "trait"]
categories = ["rust-patterns", "no-std::no-alloc"]
description = "Helper traits for more generalized options"
repository = "https://github.com/sigurd4/option_trait"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["opt_cell"]
opt_cell = []

[dependencies]
moddef = "0.2.6"

[dev-dependencies]
static_assertions = "1.1.0"

[package.metadata.docs.rs]

all-features = true
